@@ -43,27 +43,32 @@ PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM 
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
 
-1.7 Add undefined
+1.7 Add a non-element (boolean)
 PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
 
-1.8 Add null
+1.8 Add undefined
 PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
 
-1.9 Add negative infinity
+1.9 Add null
 PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
 
-1.10 Add NaN
+1.10 Add negative infinity
 PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
 
-1.11 Add positive infinity
+1.11 Add NaN
+PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
+PASS select1.options.length is 3
+PASS select1.selectedIndex is 0
+
+1.12 Add positive infinity
 PASS select1.options.add(option1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select1.options.length is 3
 PASS select1.selectedIndex is 0
@@ -187,27 +192,32 @@ PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: D
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
 
-2.15 Add undefined
+2.15 Add a non-element (boolean)
 PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
 
-2.16 Add null
+2.16 Add undefined
 PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
 
-2.17 Add negative infinity
+2.17 Add null
 PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
 
-2.18 Add NaN
+2.18 Add negative infinity
 PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
 
-2.19 Add positive infinity
+2.19 Add NaN
+PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
+PASS select2.options.length is 7
+PASS select2.selectedIndex is 1
+
+2.20 Add positive infinity
 PASS select2.options.add(option2, 1) threw exception Error: TYPE_MISMATCH_ERR: DOM Exception 17.
 PASS select2.options.length is 7
 PASS select2.selectedIndex is 1
